@@ -275,6 +275,20 @@ Analyze.model <- function(focal.predictors, mod, xlevels, default.levels=NULL, f
   }
   factor.cols[grep(":", cnames)] <- FALSE   
   X <- na.omit(expand.model.frame(mod, all.predictors))
+  
+  which.matrices <- sapply(X, function(x) is.matrix(x) && ncol(x) == 1)
+  if (any(which.matrices)){
+    nms <- names(which.matrices[which.matrices])
+    warning((if (length(nms) > 1) "there are one-column matrix predictors in the model: "
+             else "there is a one-column matrix predictor in the model: "),
+            paste(nms, collapse=", "),
+            if (length(nms) > 1) "\n  they have been converted to vectors"
+            else "\n  it has been converted to a vector")
+    for (nm in nms){
+      X[, nm] <- as.vector(X[, nm])
+    }
+  }
+  
   for (name in all.predictors){
     if (is.factor.predictor(name, mod) && is.null(xlevels[[name]])) {
       xlevels[[name]] <- levels(X[, name]) # accomodate logical predictor
